--- a/rele/test/CMakeLists.txt
+++ b/rele/test/CMakeLists.txt
@@ -85,11 +85,6 @@ if(${GSL_FOUND})
 	target_link_libraries(grid_world2 rele ${GSL_LIBRARIES})
 endif()
 
-if(${GSL_FOUND})
-	add_executable(forex TD/ForexTest.cpp)
-	target_link_libraries(forex rele ${GSL_LIBRARIES})
-endif()
-
 add_executable(mountain_car TD/MountainCarTest.cpp)
 target_link_libraries(mountain_car rele)
 
@@ -244,6 +239,11 @@ target_link_libraries(deep_off rele)
 if(${GSL_FOUND})
 	add_executable(gridFQI2 Batch/GridFQITest2.cpp)
 	target_link_libraries(gridFQI2 rele ${GSL_LIBRARIES})
+endif()
+
+if(${GSL_FOUND})
+	add_executable(forex Batch/ForexTest.cpp)
+	target_link_libraries(forex rele ${GSL_LIBRARIES})
 endif()
 
 add_executable(gridFQI Batch/GridFQITest.cpp)
