Update documentation:  - added comments to GenericNormalPolicy  - fixed the script for building the documentation

--- a/rele/doc/Makefile
+++ b/rele/doc/Makefile
@@ -49,7 +49,10 @@ help:
 clean:
 	rm -rf $(BUILDDIR)/*
 
-doxy:
+createdir:
+	mkdir -p _static _template _build
+
+doxy: createdir
 	doxygen Doxyfile
 	@echo
 	@echo "Doxygen build finished. The output is in doxyhtml"
