Added NLS test for ExpectedDeltaIRL

--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -44,5 +44,8 @@ target_link_libraries(mleH2O_test rele)
 add_executable(lqr_ExpectedDeltaIRL ExpectedDeltaIRL/ExpectedDeltaIRL_LQR.cpp)
 target_link_libraries(lqr_ExpectedDeltaIRL rele)
 
+add_executable(nls_ExpectedDeltaIRL ExpectedDeltaIRL/ExpectedDeltaIRL_NLS.cpp)
+target_link_libraries(nls_ExpectedDeltaIRL rele)
+
 add_executable(gradient_irl_test gradient/GradientIRLTest.cpp)
 target_link_libraries(gradient_irl_test rele)
