BatchCore interface upgraded.
- Transition dataset collected by Core
- Test files changed according to BatchCore changes

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -8,10 +8,10 @@ if(${GSL_FOUND})
 	target_link_libraries(gridFQI2 rele ${GSL_LIBRARIES})
 endif()
 
-if(${GSL_FOUND})
-	add_executable(forex ForexTest.cpp)
-	target_link_libraries(forex rele ${GSL_LIBRARIES})
-endif()
+#if(${GSL_FOUND})
+#	add_executable(forex ForexTest.cpp)
+#	target_link_libraries(forex rele ${GSL_LIBRARIES})
+#endif()
 
 add_executable(gridFQI GridFQITest.cpp)
 target_link_libraries(gridFQI rele)
