Compiling again off-policy gradient
- the test deep_off compiles again
- Fixed a lot of errors in policy gradient methods

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -1,7 +1,7 @@
 #Batch test
 
-#add_executable(deep_off DeepBatchTest.cpp)
-#target_link_libraries(deep_off rele)
+add_executable(deep_off DeepBatchTest.cpp)
+target_link_libraries(deep_off rele)
 
 if(${GSL_FOUND})
 	add_executable(gridFQI2 GridFQITest2.cpp)
