--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -3,6 +3,9 @@
 add_executable(deep_off DeepBatchTest.cpp)
 target_link_libraries(deep_off rele)
 
+add_executable(nls_off NlsBatchTest.cpp)
+target_link_libraries(nls_off rele)
+
 if(${GSL_FOUND})
 	add_executable(gridFQI2 GridFQITest2.cpp)
 	target_link_libraries(gridFQI2 rele ${GSL_LIBRARIES})
@@ -15,9 +18,6 @@ endif()
 
 add_executable(gridFQI GridFQITest.cpp)
 target_link_libraries(gridFQI rele)
-
-#add_executable(nls_off NlsBatchTest.cpp)
-#target_link_libraries(nls_off rele)
 
 add_executable(mc_LSPI McLSPITest.cpp)
 target_link_libraries(mc_LSPI rele)
