--- a/rele/doc/requirements.txt
+++ b/rele/doc/requirements.txt
@@ -1,6 +1,7 @@
 # This is an implicit value, here for clarity
 --index-url https://pypi.python.org/simple/
 
+pip==0.8.3
 Sphinx==1.3.5
 sphinx_rtd_theme==0.1.9
 breathe==4.1.0
