Removed GSL functions for integration.

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -6,15 +6,11 @@ target_link_libraries(deep_off rele)
 add_executable(nls_off NlsBatchTest.cpp)
 target_link_libraries(nls_off rele)
 
-if(${GSL_FOUND})
-	add_executable(gridFQI2 GridFQITest2.cpp)
-	target_link_libraries(gridFQI2 rele ${GSL_LIBRARIES})
-endif()
+add_executable(gridFQI2 GridFQITest2.cpp)
+target_link_libraries(gridFQI2 rele)
 
-#if(${GSL_FOUND})
-#	add_executable(forex ForexTest.cpp)
-#	target_link_libraries(forex rele ${GSL_LIBRARIES})
-#endif()
+add_executable(forex ForexTest.cpp)
+target_link_libraries(forex rele)
 
 add_executable(gridFQI GridFQITest.cpp)
 target_link_libraries(gridFQI rele)
