Completed MBPGA, added portfolio test
- MBPGA completed
- Added portfolio test
- need to be tested (MPGA & off policy gradients)

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -6,6 +6,9 @@ target_link_libraries(deep_off rele)
 add_executable(nls_off NlsBatchTest.cpp)
 target_link_libraries(nls_off rele)
 
+add_executable(portfolio_off PortfolioBatchTest.cpp)
+target_link_libraries(portfolio_off rele)
+
 add_executable(gridFQI2 GridFQITest2.cpp)
 target_link_libraries(gridFQI2 rele)
 
