--- a/rele_ros/CMakeLists.txt
+++ b/rele_ros/CMakeLists.txt
@@ -31,6 +31,24 @@ else()
 	set(BUILD_TYPE_MSG "Release")
 endif()
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.7")
+        message(FATAL_ERROR "Unsupported GCC/G++ version (>=4.7, it is better >=4.8)")
+    elseif(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "4.8")
+        message(STATUS "C++11 is partially supported in this version, deactiving C++11 for armadillo")
+        add_definitions(-DARMA_DONT_USE_CXX11)
+        add_definitions(-DARMA_BLAS_LONG) #required for matlab compatibility
+        message(STATUS "Added defs: -DARMA_DONT_USE_CXX11 -DARMA_BLAS_LONG")
+    endif()
+
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_GREATER "5.0")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wsuggest-override")
+    endif()
+endif()
+add_definitions( -DARMA_DONT_PRINT_ERRORS )
+
+
+
 # ------------------------ MESSAGES ----------------------------
 
 message(STATUS "Build type       : " ${BUILD_TYPE_MSG})
