Moved test files

--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -7,40 +7,40 @@ target_link_libraries(simple_chain_MWAL rele)
 add_executable(lqr_MWAL MWAL/LQRMWAL.cpp)
 target_link_libraries(lqr_MWAL rele)
 
-#EMIRL
-add_executable(lqr_EMIRL EMIRL/EMIRL_LQR.cpp)
-target_link_libraries(lqr_EMIRL rele)
-
-add_executable(nls_EMIRL EMIRL/EMIRL_NLS.cpp)
-target_link_libraries(nls_EMIRL rele)
-
-add_executable(ship_EMIRL EMIRL/EMIRL_ShipSteering.cpp)
-target_link_libraries(ship_EMIRL rele)
-
 # SMART H2O
 add_executable(mleH2O_test SmartH2O/mleH2OTest.cpp)
 target_link_libraries(mleH2O_test rele)
 
-# gradient
+# step based linear
 find_package(Boost REQUIRED COMPONENTS  program_options)
 
-add_executable(lqr_print gradient/LQRPrintTest.cpp)
+add_executable(lqr_print step_based_linear/LQRPrintTest.cpp)
 target_link_libraries(lqr_print rele)
 
-add_executable(lqr_LinearIRL gradient/LQRTest.cpp)
+add_executable(lqr_LinearIRL step_based_linear/LQRTest.cpp)
 target_link_libraries(lqr_LinearIRL rele ${Boost_LIBRARIES})
 
-add_executable(nls_LinearIRL gradient/NLSTest.cpp)
+add_executable(nls_LinearIRL step_based_linear/NLSTest.cpp)
 target_link_libraries(nls_LinearIRL rele ${Boost_LIBRARIES})
 
-add_executable(gaussian_LinearIRL gradient/GaussianTest.cpp)
+add_executable(gaussian_LinearIRL step_based_linear/GaussianTest.cpp)
 target_link_libraries(gaussian_LinearIRL rele ${Boost_LIBRARIES})
 
-add_executable(ship_LinearIRL gradient/ShipSteeringTest.cpp)
+add_executable(ship_LinearIRL step_based_linear/ShipSteeringTest.cpp)
 target_link_libraries(ship_LinearIRL rele ${Boost_LIBRARIES})
 
-add_executable(gradientIRL_test gradient/GradientIRLTest.cpp)
+add_executable(gradientIRL_test step_based_linear/GradientIRLTest.cpp)
 target_link_libraries(gradientIRL_test rele)
 
-add_executable(hessianIRL_test gradient/HessianIRLTest.cpp)
+add_executable(hessianIRL_test step_based_linear/HessianIRLTest.cpp)
 target_link_libraries(hessianIRL_test rele)
+
+# episode based linear
+add_executable(lqr_EMIRL episode_based_linear/EMIRL_LQR.cpp)
+target_link_libraries(lqr_EMIRL rele)
+
+add_executable(nls_EMIRL episode_based_linear/EMIRL_NLS.cpp)
+target_link_libraries(nls_EMIRL rele)
+
+add_executable(ship_EMIRL episode_based_linear/EMIRL_ShipSteering.cpp)
+target_link_libraries(ship_EMIRL rele)
