Added LQRExact test
- Seems to predict the correct value
- Some refactoring

--- a/rele/test/solvers/CMakeLists.txt
+++ b/rele/test/solvers/CMakeLists.txt
@@ -1,6 +1,9 @@
 #Solvers tests
-add_executable(lqr_solver_test LQRsolverTest.cpp)
+add_executable(lqr_solver_test lqr/LQRsolverTest.cpp)
 target_link_libraries(lqr_solver_test rele)
+
+add_executable(lqr_exact_test lqr/LQRExactTest.cpp)
+target_link_libraries(lqr_exact_test rele)
 
 add_executable(dynamic_programming_test dynamic_programming/DynamicProgrammingTest.cpp)
 target_link_libraries(dynamic_programming_test rele)
