Fixed BCA and distribution interface
- Fixed a bug in the optimization routine
- fixed a bug in the interface of distributions
- fixed a bug in the implementation of MAP
- fixed bayesian coordinate ascend, working

--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -48,3 +48,8 @@ target_link_libraries(ship_eblirl rele ${Boost_LIBRARIES})
 add_executable(gaussian_NoGIRL GaussianTestNoGIRL.cpp)
 target_link_libraries(gaussian_NoGIRL rele)
 
+# bayesian
+add_executable(lqr_bayesian bayesian/LQRBayesianTest.cpp)
+target_link_libraries(lqr_bayesian rele)
+
+
