Added test with NLS
- added test for NLS
- astyle

--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -52,4 +52,7 @@ target_link_libraries(gaussian_NoGIRL rele)
 add_executable(lqr_bayesian bayesian/LQRBayesianTest.cpp)
 target_link_libraries(lqr_bayesian rele)
 
+add_executable(nls_bayesian bayesian/NLSBayesianTest.cpp)
+target_link_libraries(nls_bayesian rele)
+
 
